samples/_failures_safe/1761688775_cb0f7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e98eb79d.c: In function ‘main’:
./samples/SAFE/__tmp_e98eb79d.c:153:16: error: missing terminating " character
  153 |         printf("Enter edge %d (
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e98eb79d.c:153:9: error: expected expression at end of input
  153 |         printf("Enter edge %d (
      |         ^~~~~~
./samples/SAFE/__tmp_e98eb79d.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e98eb79d.c:153:9: error: expected declaration or statement at end of input
